Thu May 27 16:18:14 2004  Jonathan Blandford  <jrb@gnome.org>

	* src/xdgmime.h: move xdg_mime_shutdown into the XDG_ENTRY guard.

Thu May 27 15:02:13 2004  Jonathan Blandford  <jrb@gnome.org>

	* src/xdgmimemagic.c (_xdg_mime_magic_read_magic_file): patch from
	Hongli Lai <h.lai@chello.nl> to catch magic files that don't end
	with a '\n'.

Fri Apr 30 11:56:01 2004  Jonathan Blandford  <jrb@gnome.org>

	* src/xdgmimemagic.c (_xdg_mime_magic_read_a_number): make the
	buffer the right size.  Reported by Morten Welinder, #136323

Sun Mar 21 23:56:46 2004  Jonathan Blandford  <jrb@gnome.org>

	* src/xdgmimemagic.c: Patch from Arjan van de Ven
	<arjanv@redhat.com> to do s/fgetc/getc_unlocked/g.

Wed Mar 10 22:28:41 2004  Jonathan Blandford  <jrb@gnome.org>

	* src/xdgmimemagic.c (_xdg_mime_magic_read_a_number): fix usage of
	isdigit.  Reported by Morten Welinder, #136323

	* src/xdgmimemagic.c (_xdg_mime_magic_read_magic_file): patch from
	Christophe Fergeau to reverse the order of the matchlet before
	adding it to the list.

	* src/xdgmimeint.h (_xdg_utf8_skip): patch from Alexander Larsson
	to make extern.

Wed Jan 21 09:29:41 2004  Jonathan Blandford  <jrb@gnome.org>

	* src/xdgmimemagic.c (_xdg_mime_magic_insert_match): dropped
	patches.  Fix.

	* src/xdgmimeglob.c (_xdg_glob_hash_free_nodes): dropped patches.
	Fix.

Tue Jan 20 14:55:39 2004  Jonathan Blandford  <jrb@gnome.org>

	* src/xdgmime.h (XDG_MIME_TYPE_UNKNOWN): move the definition so
	that it catches the XDG_ENTRY mangling.

	* src/xdgmimemagic.c: make some functions static

Tue Jan 20 14:34:26 2004  Jonathan Blandford  <jrb@gnome.org>

	* src/xdgmime.c (xdg_mime_get_max_buffer_extents): add function so
	that it's easy to get the max buffer extents.

Tue Jan 20 12:55:55 2004  Jonathan Blandford  <jrb@gnome.org>

	* src/Makefile: Test prefix code

	* src/xdgmime*.h: Fully use the prefix code

	* src/xdgmime.c: finish the syncing from both GTK+ and gnome-vfs.
