@@ -1,3 +1,8 @@
+Sun Jul 18 20:56:22 2004  Jonathan Blandford  <jrb@gnome.org>
+
+	* src/xdgmime.c (xdg_mime_shutdown):
+	(xdg_mime_init): reread data when it changes on disk.
+
 Thu May 27 16:18:14 2004  Jonathan Blandford  <jrb@gnome.org>
 
 	* src/xdgmime.h: move xdg_mime_shutdown into the XDG_ENTRY guard.
